--- a/algorithms/week01/test_jupyter_in_vscode.ipynb
+++ b/algorithms/week01/test_jupyter_in_vscode.ipynb
@@ -20,26 +20,26 @@
  },
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
-    "print('hello')"
+    "print('goodbye')"
    ],
    "cell_type": "code",
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "hello\n"
+     "text": "goodbye\n"
     }
    ],
    "metadata": {},
-   "execution_count": 1
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 4
   }
  ]
 }
